# django-bugtracker

./: README.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210224_0031.py
bug_tracker/: admin.py  forms.py  models.py  views.py
bug_tracker/migrations/: 0001_initial.py  0002_auto_20210224_0217.py  0003_auto_20210226_1542.py  0004_auto_20210226_1554.py  0005_auto_20210226_2008.py
config/: settings.py  urls.py
static/css/: style.css
templates/: author_detail.html  base.html  create_ticket.html  edit_ticket.html  home.html  ticket_detail.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
