[tool.poetry]
name = "bugtracker-josephdubon"
version = "0.1.0"
description = "Bug tracker application"
authors = ["Joseph Dubon <josephdubon@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
